# openferris

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  issue-triage-agent.yml  labels-sync.yml  pr-labeler.yml  release.yml  stale.yml
config/: default.toml
crates/ferris-common/: Cargo.toml
crates/ferris-common/src/: lib.rs
crates/ferris-coordinator/: Cargo.toml
crates/ferris-coordinator/src/: auth.rs  db.rs  lib.rs  main.rs  registry.rs  router.rs  routes.rs  storage_router.rs
crates/ferris-coordinator/tests/: coordinator_api.rs
crates/ferris-core/: Cargo.toml
crates/ferris-core/src/: config.rs  db.rs  identity.rs  inference_setup.rs  ironferris.code-workspace  lib.rs  main.rs  resources.rs  server.rs
crates/ferris-core/tests/: config_identity.rs  http_api.rs
crates/ferris-credits/: Cargo.toml
crates/ferris-credits/src/: lib.rs
crates/ferris-crypto/: Cargo.toml
crates/ferris-crypto/src/: lib.rs
crates/ferris-inference/: Cargo.toml
crates/ferris-inference/src/: candle_backend.rs  lib.rs  model_manager.rs
crates/ferris-mcp/: Cargo.toml
crates/ferris-mcp/src/: lib.rs
crates/ferris-mcp/tests/: mcp_tools.rs
crates/ferris-memory/: Cargo.toml
crates/ferris-memory/src/: lib.rs
crates/ferris-net/: Cargo.toml
crates/ferris-net/src/: lib.rs
crates/ferris-storage/: Cargo.toml
crates/ferris-storage/src/: lib.rs
crates/ferris-tasks/: Cargo.toml
crates/ferris-tasks/src/: lib.rs
docs/: DOCS_INDEX.md  PRD.md  agent-distribution.md  agent-interoperability.md  architecture.md  build-readiness-checklist.md  collaboration-ops.md  component-matrix.md  economy.md  first-contribution.md  gap-analysis.md  launch-plan.md  local-development.md  mobile-supply.md  rust-port-plan.md  spec-v1.md  token-strategy.md  two-flywheel-strategy.md
migrations/coordinator/: 0001_init.sql  0002_network_storage.sql  0003_message_queue.sql
migrations/node/: 0001_init.sql  0002_vector_search.sql  0003_task_execution.sql
scripts/: install.sh
