[workspace]
members = [
    "crates/ferris-common",
    "crates/ferris-core",
    "crates/ferris-memory",
    "crates/ferris-storage",
    "crates/ferris-tasks",
    "crates/ferris-mcp",
    "crates/ferris-credits",
    "crates/ferris-net",
    "crates/ferris-inference",
    "crates/ferris-coordinator",
    "crates/ferris-crypto",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["OpenFerris"]

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
sysinfo = "0.33"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "schemars"] }
schemars = "1"
uuid = { version = "1", features = ["serde", "v7"] }
