[package]
name = "ferris-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "BUSL-1.1"

[dependencies]
ferris-common = { path = "../ferris-common" }
ferris-credits = { path = "../ferris-credits" }
ferris-inference = { path = "../ferris-inference" }
axum.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
futures = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
openssl.workspace = true

[lib]
name = "ferris_coordinator"
path = "src/lib.rs"

[[bin]]
name = "ferris-coordinator"
path = "src/main.rs"

[dev-dependencies]
rand_core.workspace = true
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
