[package]
name = "ferris-credits"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferris-common = { path = "../ferris-common" }
serde.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
