[package]
name = "ferris-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10"
hkdf = "0.13"
rand.workspace = true
sha2 = "0.10"

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
tokio.workspace = true
