[package]
name = "ferris-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferris-common = { path = "../ferris-common" }
base64.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
rand_core.workspace = true
